backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> request
Rule 1     upalpha -> UPALPHA
Rule 2     upalpha -> UPHEX
Rule 3     loalpha -> LOALPHA
Rule 4     loalpha -> LOHEX
Rule 5     alpha -> upalpha
Rule 6     alpha -> loalpha
Rule 7     alphanum -> alpha
Rule 8     alphanum -> DIGIT
Rule 9     ctl -> CTL
Rule 10    ctl -> CR
Rule 11    ctl -> LF
Rule 12    ctl -> HT
Rule 13    spht -> SP
Rule 14    spht -> HT
Rule 15    revsep -> COLON
Rule 16    revsep -> QUESTION
Rule 17    revsep -> AT
Rule 18    revsep -> SEMICOLON
Rule 19    revsep -> EQUAL
Rule 20    revsep -> COMMA
Rule 21    revsep -> SLASH
Rule 22    separators -> SEPARATORS
Rule 23    separators -> SLASH
Rule 24    separators -> spht
Rule 25    separators -> revsep
Rule 26    separators -> MARKSEP
Rule 27    revtoken -> PLUS
Rule 28    revtoken -> AMPERSAND
Rule 29    revtoken -> DOLLAR
Rule 30    marktoken -> MARKTOKEN
Rule 31    marktoken -> DOT
Rule 32    marktoken -> ASTERISK
Rule 33    marktoken -> MINUS
Rule 34    tokenchar -> TOKEN
Rule 35    tokenchar -> alphanum
Rule 36    tokenchar -> revtoken
Rule 37    tokenchar -> marktoken
Rule 38    tokenchar -> PERCENT
Rule 39    textchar -> TEXT
Rule 40    textchar -> tokenchar
Rule 41    textchar -> CR
Rule 42    textchar -> LF
Rule 43    textchar -> separators
Rule 44    octet -> textchar
Rule 45    octet -> ctl
Rule 46    crlf -> CR LF
Rule 47    token -> tokenchar
Rule 48    token -> token tokenchar
Rule 49    text -> textchar
Rule 50    text -> text textchar
Rule 51    fieldvaluepart -> octet
Rule 52    fieldvaluepart -> spht
Rule 53    fieldvalue -> fieldvaluepart
Rule 54    fieldvalue -> fieldvalue fieldvaluepart
Rule 55    requestheaderpart -> token COLON fieldvalue crlf
Rule 56    requestheaderpart -> token COLON crlf
Rule 57    requestheader -> requestheaderpart
Rule 58    requestheader -> requestheader requestheaderpart
Rule 59    httpversion -> token SLASH DIGIT DOT DIGIT
Rule 60    requestline -> token SP text SP httpversion crlf
Rule 61    request -> requestline requestheader crlf
Rule 62    request -> requestline crlf
Rule 63    request -> requestline requestheader body
Rule 64    body -> crlf text

Terminals, with rules where they appear

AMPERSAND            : 28
ASTERISK             : 32
AT                   : 17
COLON                : 15 55 56
COMMA                : 20
CR                   : 10 41 46
CTL                  : 9
DIGIT                : 8 59 59
DOLLAR               : 29
DOT                  : 31 59
EQUAL                : 19
HT                   : 12 14
LF                   : 11 42 46
LOALPHA              : 3
LOHEX                : 4
MARKSEP              : 26
MARKTOKEN            : 30
MINUS                : 33
PERCENT              : 38
PLUS                 : 27
QUESTION             : 16
SEMICOLON            : 18
SEPARATORS           : 22
SLASH                : 21 23 59
SP                   : 13 60 60
TEXT                 : 39
TOKEN                : 34
UPALPHA              : 1
UPHEX                : 2
error                : 

Nonterminals, with rules where they appear

alpha                : 7
alphanum             : 35
body                 : 63
crlf                 : 55 56 60 61 62 64
ctl                  : 45
fieldvalue           : 54 55
fieldvaluepart       : 53 54
httpversion          : 60
loalpha              : 6
marktoken            : 37
octet                : 51
request              : 0
requestheader        : 58 61 63
requestheaderpart    : 57 58
requestline          : 61 62 63
revsep               : 25
revtoken             : 36
separators           : 43
spht                 : 24 52
text                 : 50 60 64
textchar             : 44 49 50
token                : 48 55 56 59 60
tokenchar            : 40 47 48
upalpha              : 5

Parsing method: LALR

state 0

    (0) S' -> . request
    (61) request -> . requestline requestheader crlf
    (62) request -> . requestline crlf
    (63) request -> . requestline requestheader body
    (60) requestline -> . token SP text SP httpversion crlf
    (47) token -> . tokenchar
    (48) token -> . token tokenchar
    (34) tokenchar -> . TOKEN
    (35) tokenchar -> . alphanum
    (36) tokenchar -> . revtoken
    (37) tokenchar -> . marktoken
    (38) tokenchar -> . PERCENT
    (7) alphanum -> . alpha
    (8) alphanum -> . DIGIT
    (27) revtoken -> . PLUS
    (28) revtoken -> . AMPERSAND
    (29) revtoken -> . DOLLAR
    (30) marktoken -> . MARKTOKEN
    (31) marktoken -> . DOT
    (32) marktoken -> . ASTERISK
    (33) marktoken -> . MINUS
    (5) alpha -> . upalpha
    (6) alpha -> . loalpha
    (1) upalpha -> . UPALPHA
    (2) upalpha -> . UPHEX
    (3) loalpha -> . LOALPHA
    (4) loalpha -> . LOHEX

    TOKEN           shift and go to state 5
    PERCENT         shift and go to state 9
    DIGIT           shift and go to state 11
    PLUS            shift and go to state 12
    AMPERSAND       shift and go to state 13
    DOLLAR          shift and go to state 14
    MARKTOKEN       shift and go to state 15
    DOT             shift and go to state 16
    ASTERISK        shift and go to state 17
    MINUS           shift and go to state 18
    UPALPHA         shift and go to state 21
    UPHEX           shift and go to state 22
    LOALPHA         shift and go to state 23
    LOHEX           shift and go to state 24

    request                        shift and go to state 1
    requestline                    shift and go to state 2
    token                          shift and go to state 3
    tokenchar                      shift and go to state 4
    alphanum                       shift and go to state 6
    revtoken                       shift and go to state 7
    marktoken                      shift and go to state 8
    alpha                          shift and go to state 10
    upalpha                        shift and go to state 19
    loalpha                        shift and go to state 20

state 1

    (0) S' -> request .



state 2

    (61) request -> requestline . requestheader crlf
    (62) request -> requestline . crlf
    (63) request -> requestline . requestheader body
    (57) requestheader -> . requestheaderpart
    (58) requestheader -> . requestheader requestheaderpart
    (46) crlf -> . CR LF
    (55) requestheaderpart -> . token COLON fieldvalue crlf
    (56) requestheaderpart -> . token COLON crlf
    (47) token -> . tokenchar
    (48) token -> . token tokenchar
    (34) tokenchar -> . TOKEN
    (35) tokenchar -> . alphanum
    (36) tokenchar -> . revtoken
    (37) tokenchar -> . marktoken
    (38) tokenchar -> . PERCENT
    (7) alphanum -> . alpha
    (8) alphanum -> . DIGIT
    (27) revtoken -> . PLUS
    (28) revtoken -> . AMPERSAND
    (29) revtoken -> . DOLLAR
    (30) marktoken -> . MARKTOKEN
    (31) marktoken -> . DOT
    (32) marktoken -> . ASTERISK
    (33) marktoken -> . MINUS
    (5) alpha -> . upalpha
    (6) alpha -> . loalpha
    (1) upalpha -> . UPALPHA
    (2) upalpha -> . UPHEX
    (3) loalpha -> . LOALPHA
    (4) loalpha -> . LOHEX

    CR              shift and go to state 28
    TOKEN           shift and go to state 5
    PERCENT         shift and go to state 9
    DIGIT           shift and go to state 11
    PLUS            shift and go to state 12
    AMPERSAND       shift and go to state 13
    DOLLAR          shift and go to state 14
    MARKTOKEN       shift and go to state 15
    DOT             shift and go to state 16
    ASTERISK        shift and go to state 17
    MINUS           shift and go to state 18
    UPALPHA         shift and go to state 21
    UPHEX           shift and go to state 22
    LOALPHA         shift and go to state 23
    LOHEX           shift and go to state 24

    requestheader                  shift and go to state 25
    crlf                           shift and go to state 26
    requestheaderpart              shift and go to state 27
    token                          shift and go to state 29
    tokenchar                      shift and go to state 4
    alphanum                       shift and go to state 6
    revtoken                       shift and go to state 7
    marktoken                      shift and go to state 8
    alpha                          shift and go to state 10
    upalpha                        shift and go to state 19
    loalpha                        shift and go to state 20

state 3

    (60) requestline -> token . SP text SP httpversion crlf
    (48) token -> token . tokenchar
    (34) tokenchar -> . TOKEN
    (35) tokenchar -> . alphanum
    (36) tokenchar -> . revtoken
    (37) tokenchar -> . marktoken
    (38) tokenchar -> . PERCENT
    (7) alphanum -> . alpha
    (8) alphanum -> . DIGIT
    (27) revtoken -> . PLUS
    (28) revtoken -> . AMPERSAND
    (29) revtoken -> . DOLLAR
    (30) marktoken -> . MARKTOKEN
    (31) marktoken -> . DOT
    (32) marktoken -> . ASTERISK
    (33) marktoken -> . MINUS
    (5) alpha -> . upalpha
    (6) alpha -> . loalpha
    (1) upalpha -> . UPALPHA
    (2) upalpha -> . UPHEX
    (3) loalpha -> . LOALPHA
    (4) loalpha -> . LOHEX

    SP              shift and go to state 30
    TOKEN           shift and go to state 5
    PERCENT         shift and go to state 9
    DIGIT           shift and go to state 11
    PLUS            shift and go to state 12
    AMPERSAND       shift and go to state 13
    DOLLAR          shift and go to state 14
    MARKTOKEN       shift and go to state 15
    DOT             shift and go to state 16
    ASTERISK        shift and go to state 17
    MINUS           shift and go to state 18
    UPALPHA         shift and go to state 21
    UPHEX           shift and go to state 22
    LOALPHA         shift and go to state 23
    LOHEX           shift and go to state 24

    tokenchar                      shift and go to state 31
    alphanum                       shift and go to state 6
    revtoken                       shift and go to state 7
    marktoken                      shift and go to state 8
    alpha                          shift and go to state 10
    upalpha                        shift and go to state 19
    loalpha                        shift and go to state 20

state 4

    (47) token -> tokenchar .

    SP              reduce using rule 47 (token -> tokenchar .)
    TOKEN           reduce using rule 47 (token -> tokenchar .)
    PERCENT         reduce using rule 47 (token -> tokenchar .)
    DIGIT           reduce using rule 47 (token -> tokenchar .)
    PLUS            reduce using rule 47 (token -> tokenchar .)
    AMPERSAND       reduce using rule 47 (token -> tokenchar .)
    DOLLAR          reduce using rule 47 (token -> tokenchar .)
    MARKTOKEN       reduce using rule 47 (token -> tokenchar .)
    DOT             reduce using rule 47 (token -> tokenchar .)
    ASTERISK        reduce using rule 47 (token -> tokenchar .)
    MINUS           reduce using rule 47 (token -> tokenchar .)
    UPALPHA         reduce using rule 47 (token -> tokenchar .)
    UPHEX           reduce using rule 47 (token -> tokenchar .)
    LOALPHA         reduce using rule 47 (token -> tokenchar .)
    LOHEX           reduce using rule 47 (token -> tokenchar .)
    COLON           reduce using rule 47 (token -> tokenchar .)
    SLASH           reduce using rule 47 (token -> tokenchar .)


state 5

    (34) tokenchar -> TOKEN .

    SP              reduce using rule 34 (tokenchar -> TOKEN .)
    TOKEN           reduce using rule 34 (tokenchar -> TOKEN .)
    PERCENT         reduce using rule 34 (tokenchar -> TOKEN .)
    DIGIT           reduce using rule 34 (tokenchar -> TOKEN .)
    PLUS            reduce using rule 34 (tokenchar -> TOKEN .)
    AMPERSAND       reduce using rule 34 (tokenchar -> TOKEN .)
    DOLLAR          reduce using rule 34 (tokenchar -> TOKEN .)
    MARKTOKEN       reduce using rule 34 (tokenchar -> TOKEN .)
    DOT             reduce using rule 34 (tokenchar -> TOKEN .)
    ASTERISK        reduce using rule 34 (tokenchar -> TOKEN .)
    MINUS           reduce using rule 34 (tokenchar -> TOKEN .)
    UPALPHA         reduce using rule 34 (tokenchar -> TOKEN .)
    UPHEX           reduce using rule 34 (tokenchar -> TOKEN .)
    LOALPHA         reduce using rule 34 (tokenchar -> TOKEN .)
    LOHEX           reduce using rule 34 (tokenchar -> TOKEN .)
    COLON           reduce using rule 34 (tokenchar -> TOKEN .)
    TEXT            reduce using rule 34 (tokenchar -> TOKEN .)
    CR              reduce using rule 34 (tokenchar -> TOKEN .)
    LF              reduce using rule 34 (tokenchar -> TOKEN .)
    SEPARATORS      reduce using rule 34 (tokenchar -> TOKEN .)
    SLASH           reduce using rule 34 (tokenchar -> TOKEN .)
    MARKSEP         reduce using rule 34 (tokenchar -> TOKEN .)
    HT              reduce using rule 34 (tokenchar -> TOKEN .)
    QUESTION        reduce using rule 34 (tokenchar -> TOKEN .)
    AT              reduce using rule 34 (tokenchar -> TOKEN .)
    SEMICOLON       reduce using rule 34 (tokenchar -> TOKEN .)
    EQUAL           reduce using rule 34 (tokenchar -> TOKEN .)
    COMMA           reduce using rule 34 (tokenchar -> TOKEN .)
    $end            reduce using rule 34 (tokenchar -> TOKEN .)
    CTL             reduce using rule 34 (tokenchar -> TOKEN .)


state 6

    (35) tokenchar -> alphanum .

    SP              reduce using rule 35 (tokenchar -> alphanum .)
    TOKEN           reduce using rule 35 (tokenchar -> alphanum .)
    PERCENT         reduce using rule 35 (tokenchar -> alphanum .)
    DIGIT           reduce using rule 35 (tokenchar -> alphanum .)
    PLUS            reduce using rule 35 (tokenchar -> alphanum .)
    AMPERSAND       reduce using rule 35 (tokenchar -> alphanum .)
    DOLLAR          reduce using rule 35 (tokenchar -> alphanum .)
    MARKTOKEN       reduce using rule 35 (tokenchar -> alphanum .)
    DOT             reduce using rule 35 (tokenchar -> alphanum .)
    ASTERISK        reduce using rule 35 (tokenchar -> alphanum .)
    MINUS           reduce using rule 35 (tokenchar -> alphanum .)
    UPALPHA         reduce using rule 35 (tokenchar -> alphanum .)
    UPHEX           reduce using rule 35 (tokenchar -> alphanum .)
    LOALPHA         reduce using rule 35 (tokenchar -> alphanum .)
    LOHEX           reduce using rule 35 (tokenchar -> alphanum .)
    COLON           reduce using rule 35 (tokenchar -> alphanum .)
    TEXT            reduce using rule 35 (tokenchar -> alphanum .)
    CR              reduce using rule 35 (tokenchar -> alphanum .)
    LF              reduce using rule 35 (tokenchar -> alphanum .)
    SEPARATORS      reduce using rule 35 (tokenchar -> alphanum .)
    SLASH           reduce using rule 35 (tokenchar -> alphanum .)
    MARKSEP         reduce using rule 35 (tokenchar -> alphanum .)
    HT              reduce using rule 35 (tokenchar -> alphanum .)
    QUESTION        reduce using rule 35 (tokenchar -> alphanum .)
    AT              reduce using rule 35 (tokenchar -> alphanum .)
    SEMICOLON       reduce using rule 35 (tokenchar -> alphanum .)
    EQUAL           reduce using rule 35 (tokenchar -> alphanum .)
    COMMA           reduce using rule 35 (tokenchar -> alphanum .)
    $end            reduce using rule 35 (tokenchar -> alphanum .)
    CTL             reduce using rule 35 (tokenchar -> alphanum .)


state 7

    (36) tokenchar -> revtoken .

    SP              reduce using rule 36 (tokenchar -> revtoken .)
    TOKEN           reduce using rule 36 (tokenchar -> revtoken .)
    PERCENT         reduce using rule 36 (tokenchar -> revtoken .)
    DIGIT           reduce using rule 36 (tokenchar -> revtoken .)
    PLUS            reduce using rule 36 (tokenchar -> revtoken .)
    AMPERSAND       reduce using rule 36 (tokenchar -> revtoken .)
    DOLLAR          reduce using rule 36 (tokenchar -> revtoken .)
    MARKTOKEN       reduce using rule 36 (tokenchar -> revtoken .)
    DOT             reduce using rule 36 (tokenchar -> revtoken .)
    ASTERISK        reduce using rule 36 (tokenchar -> revtoken .)
    MINUS           reduce using rule 36 (tokenchar -> revtoken .)
    UPALPHA         reduce using rule 36 (tokenchar -> revtoken .)
    UPHEX           reduce using rule 36 (tokenchar -> revtoken .)
    LOALPHA         reduce using rule 36 (tokenchar -> revtoken .)
    LOHEX           reduce using rule 36 (tokenchar -> revtoken .)
    COLON           reduce using rule 36 (tokenchar -> revtoken .)
    TEXT            reduce using rule 36 (tokenchar -> revtoken .)
    CR              reduce using rule 36 (tokenchar -> revtoken .)
    LF              reduce using rule 36 (tokenchar -> revtoken .)
    SEPARATORS      reduce using rule 36 (tokenchar -> revtoken .)
    SLASH           reduce using rule 36 (tokenchar -> revtoken .)
    MARKSEP         reduce using rule 36 (tokenchar -> revtoken .)
    HT              reduce using rule 36 (tokenchar -> revtoken .)
    QUESTION        reduce using rule 36 (tokenchar -> revtoken .)
    AT              reduce using rule 36 (tokenchar -> revtoken .)
    SEMICOLON       reduce using rule 36 (tokenchar -> revtoken .)
    EQUAL           reduce using rule 36 (tokenchar -> revtoken .)
    COMMA           reduce using rule 36 (tokenchar -> revtoken .)
    $end            reduce using rule 36 (tokenchar -> revtoken .)
    CTL             reduce using rule 36 (tokenchar -> revtoken .)


state 8

    (37) tokenchar -> marktoken .

    SP              reduce using rule 37 (tokenchar -> marktoken .)
    TOKEN           reduce using rule 37 (tokenchar -> marktoken .)
    PERCENT         reduce using rule 37 (tokenchar -> marktoken .)
    DIGIT           reduce using rule 37 (tokenchar -> marktoken .)
    PLUS            reduce using rule 37 (tokenchar -> marktoken .)
    AMPERSAND       reduce using rule 37 (tokenchar -> marktoken .)
    DOLLAR          reduce using rule 37 (tokenchar -> marktoken .)
    MARKTOKEN       reduce using rule 37 (tokenchar -> marktoken .)
    DOT             reduce using rule 37 (tokenchar -> marktoken .)
    ASTERISK        reduce using rule 37 (tokenchar -> marktoken .)
    MINUS           reduce using rule 37 (tokenchar -> marktoken .)
    UPALPHA         reduce using rule 37 (tokenchar -> marktoken .)
    UPHEX           reduce using rule 37 (tokenchar -> marktoken .)
    LOALPHA         reduce using rule 37 (tokenchar -> marktoken .)
    LOHEX           reduce using rule 37 (tokenchar -> marktoken .)
    COLON           reduce using rule 37 (tokenchar -> marktoken .)
    TEXT            reduce using rule 37 (tokenchar -> marktoken .)
    CR              reduce using rule 37 (tokenchar -> marktoken .)
    LF              reduce using rule 37 (tokenchar -> marktoken .)
    SEPARATORS      reduce using rule 37 (tokenchar -> marktoken .)
    SLASH           reduce using rule 37 (tokenchar -> marktoken .)
    MARKSEP         reduce using rule 37 (tokenchar -> marktoken .)
    HT              reduce using rule 37 (tokenchar -> marktoken .)
    QUESTION        reduce using rule 37 (tokenchar -> marktoken .)
    AT              reduce using rule 37 (tokenchar -> marktoken .)
    SEMICOLON       reduce using rule 37 (tokenchar -> marktoken .)
    EQUAL           reduce using rule 37 (tokenchar -> marktoken .)
    COMMA           reduce using rule 37 (tokenchar -> marktoken .)
    $end            reduce using rule 37 (tokenchar -> marktoken .)
    CTL             reduce using rule 37 (tokenchar -> marktoken .)


state 9

    (38) tokenchar -> PERCENT .

    SP              reduce using rule 38 (tokenchar -> PERCENT .)
    TOKEN           reduce using rule 38 (tokenchar -> PERCENT .)
    PERCENT         reduce using rule 38 (tokenchar -> PERCENT .)
    DIGIT           reduce using rule 38 (tokenchar -> PERCENT .)
    PLUS            reduce using rule 38 (tokenchar -> PERCENT .)
    AMPERSAND       reduce using rule 38 (tokenchar -> PERCENT .)
    DOLLAR          reduce using rule 38 (tokenchar -> PERCENT .)
    MARKTOKEN       reduce using rule 38 (tokenchar -> PERCENT .)
    DOT             reduce using rule 38 (tokenchar -> PERCENT .)
    ASTERISK        reduce using rule 38 (tokenchar -> PERCENT .)
    MINUS           reduce using rule 38 (tokenchar -> PERCENT .)
    UPALPHA         reduce using rule 38 (tokenchar -> PERCENT .)
    UPHEX           reduce using rule 38 (tokenchar -> PERCENT .)
    LOALPHA         reduce using rule 38 (tokenchar -> PERCENT .)
    LOHEX           reduce using rule 38 (tokenchar -> PERCENT .)
    COLON           reduce using rule 38 (tokenchar -> PERCENT .)
    TEXT            reduce using rule 38 (tokenchar -> PERCENT .)
    CR              reduce using rule 38 (tokenchar -> PERCENT .)
    LF              reduce using rule 38 (tokenchar -> PERCENT .)
    SEPARATORS      reduce using rule 38 (tokenchar -> PERCENT .)
    SLASH           reduce using rule 38 (tokenchar -> PERCENT .)
    MARKSEP         reduce using rule 38 (tokenchar -> PERCENT .)
    HT              reduce using rule 38 (tokenchar -> PERCENT .)
    QUESTION        reduce using rule 38 (tokenchar -> PERCENT .)
    AT              reduce using rule 38 (tokenchar -> PERCENT .)
    SEMICOLON       reduce using rule 38 (tokenchar -> PERCENT .)
    EQUAL           reduce using rule 38 (tokenchar -> PERCENT .)
    COMMA           reduce using rule 38 (tokenchar -> PERCENT .)
    $end            reduce using rule 38 (tokenchar -> PERCENT .)
    CTL             reduce using rule 38 (tokenchar -> PERCENT .)


state 10

    (7) alphanum -> alpha .

    SP              reduce using rule 7 (alphanum -> alpha .)
    TOKEN           reduce using rule 7 (alphanum -> alpha .)
    PERCENT         reduce using rule 7 (alphanum -> alpha .)
    DIGIT           reduce using rule 7 (alphanum -> alpha .)
    PLUS            reduce using rule 7 (alphanum -> alpha .)
    AMPERSAND       reduce using rule 7 (alphanum -> alpha .)
    DOLLAR          reduce using rule 7 (alphanum -> alpha .)
    MARKTOKEN       reduce using rule 7 (alphanum -> alpha .)
    DOT             reduce using rule 7 (alphanum -> alpha .)
    ASTERISK        reduce using rule 7 (alphanum -> alpha .)
    MINUS           reduce using rule 7 (alphanum -> alpha .)
    UPALPHA         reduce using rule 7 (alphanum -> alpha .)
    UPHEX           reduce using rule 7 (alphanum -> alpha .)
    LOALPHA         reduce using rule 7 (alphanum -> alpha .)
    LOHEX           reduce using rule 7 (alphanum -> alpha .)
    COLON           reduce using rule 7 (alphanum -> alpha .)
    TEXT            reduce using rule 7 (alphanum -> alpha .)
    CR              reduce using rule 7 (alphanum -> alpha .)
    LF              reduce using rule 7 (alphanum -> alpha .)
    SEPARATORS      reduce using rule 7 (alphanum -> alpha .)
    SLASH           reduce using rule 7 (alphanum -> alpha .)
    MARKSEP         reduce using rule 7 (alphanum -> alpha .)
    HT              reduce using rule 7 (alphanum -> alpha .)
    QUESTION        reduce using rule 7 (alphanum -> alpha .)
    AT              reduce using rule 7 (alphanum -> alpha .)
    SEMICOLON       reduce using rule 7 (alphanum -> alpha .)
    EQUAL           reduce using rule 7 (alphanum -> alpha .)
    COMMA           reduce using rule 7 (alphanum -> alpha .)
    $end            reduce using rule 7 (alphanum -> alpha .)
    CTL             reduce using rule 7 (alphanum -> alpha .)


state 11

    (8) alphanum -> DIGIT .

    SP              reduce using rule 8 (alphanum -> DIGIT .)
    TOKEN           reduce using rule 8 (alphanum -> DIGIT .)
    PERCENT         reduce using rule 8 (alphanum -> DIGIT .)
    DIGIT           reduce using rule 8 (alphanum -> DIGIT .)
    PLUS            reduce using rule 8 (alphanum -> DIGIT .)
    AMPERSAND       reduce using rule 8 (alphanum -> DIGIT .)
    DOLLAR          reduce using rule 8 (alphanum -> DIGIT .)
    MARKTOKEN       reduce using rule 8 (alphanum -> DIGIT .)
    DOT             reduce using rule 8 (alphanum -> DIGIT .)
    ASTERISK        reduce using rule 8 (alphanum -> DIGIT .)
    MINUS           reduce using rule 8 (alphanum -> DIGIT .)
    UPALPHA         reduce using rule 8 (alphanum -> DIGIT .)
    UPHEX           reduce using rule 8 (alphanum -> DIGIT .)
    LOALPHA         reduce using rule 8 (alphanum -> DIGIT .)
    LOHEX           reduce using rule 8 (alphanum -> DIGIT .)
    COLON           reduce using rule 8 (alphanum -> DIGIT .)
    TEXT            reduce using rule 8 (alphanum -> DIGIT .)
    CR              reduce using rule 8 (alphanum -> DIGIT .)
    LF              reduce using rule 8 (alphanum -> DIGIT .)
    SEPARATORS      reduce using rule 8 (alphanum -> DIGIT .)
    SLASH           reduce using rule 8 (alphanum -> DIGIT .)
    MARKSEP         reduce using rule 8 (alphanum -> DIGIT .)
    HT              reduce using rule 8 (alphanum -> DIGIT .)
    QUESTION        reduce using rule 8 (alphanum -> DIGIT .)
    AT              reduce using rule 8 (alphanum -> DIGIT .)
    SEMICOLON       reduce using rule 8 (alphanum -> DIGIT .)
    EQUAL           reduce using rule 8 (alphanum -> DIGIT .)
    COMMA           reduce using rule 8 (alphanum -> DIGIT .)
    $end            reduce using rule 8 (alphanum -> DIGIT .)
    CTL             reduce using rule 8 (alphanum -> DIGIT .)


state 12

    (27) revtoken -> PLUS .

    SP              reduce using rule 27 (revtoken -> PLUS .)
    TOKEN           reduce using rule 27 (revtoken -> PLUS .)
    PERCENT         reduce using rule 27 (revtoken -> PLUS .)
    DIGIT           reduce using rule 27 (revtoken -> PLUS .)
    PLUS            reduce using rule 27 (revtoken -> PLUS .)
    AMPERSAND       reduce using rule 27 (revtoken -> PLUS .)
    DOLLAR          reduce using rule 27 (revtoken -> PLUS .)
    MARKTOKEN       reduce using rule 27 (revtoken -> PLUS .)
    DOT             reduce using rule 27 (revtoken -> PLUS .)
    ASTERISK        reduce using rule 27 (revtoken -> PLUS .)
    MINUS           reduce using rule 27 (revtoken -> PLUS .)
    UPALPHA         reduce using rule 27 (revtoken -> PLUS .)
    UPHEX           reduce using rule 27 (revtoken -> PLUS .)
    LOALPHA         reduce using rule 27 (revtoken -> PLUS .)
    LOHEX           reduce using rule 27 (revtoken -> PLUS .)
    COLON           reduce using rule 27 (revtoken -> PLUS .)
    TEXT            reduce using rule 27 (revtoken -> PLUS .)
    CR              reduce using rule 27 (revtoken -> PLUS .)
    LF              reduce using rule 27 (revtoken -> PLUS .)
    SEPARATORS      reduce using rule 27 (revtoken -> PLUS .)
    SLASH           reduce using rule 27 (revtoken -> PLUS .)
    MARKSEP         reduce using rule 27 (revtoken -> PLUS .)
    HT              reduce using rule 27 (revtoken -> PLUS .)
    QUESTION        reduce using rule 27 (revtoken -> PLUS .)
    AT              reduce using rule 27 (revtoken -> PLUS .)
    SEMICOLON       reduce using rule 27 (revtoken -> PLUS .)
    EQUAL           reduce using rule 27 (revtoken -> PLUS .)
    COMMA           reduce using rule 27 (revtoken -> PLUS .)
    $end            reduce using rule 27 (revtoken -> PLUS .)
    CTL             reduce using rule 27 (revtoken -> PLUS .)


state 13

    (28) revtoken -> AMPERSAND .
